<resources>
    <string name="app_name">MONDAY</string>
    <string name="title_home">个人中心</string>
    <string name="title_dashboard">班级列表</string>
    <string name="title_notifications">通知</string>
    <string name="clazz_attendance">班级签到列表</string>
    <string name="att_date_time">%1$s - %2$s</string>
    <string name="att_click_str">点击签到</string>
    <string name="att_qrcode_str">扫描二维码签到</string>
    <string name="att_face_str">人脸识别签到</string>
    <string name="att_location_str">获取地理位置签到</string>
    <string name="engine_active">激活引擎</string>
    <string name="face_register">人脸录入</string>
    <string name="fingerprint_sign_in">指纹快捷登录</string>
    <string name="face_sign_in">人脸快捷登录</string>
    <string name="btn_update_user_info">修改个人信息</string>
    <string name="check_for_update">检查更新</string>
    <string name="btn_update_user">修改</string>
    <string name="att_location">位置签到</string>
    <string name="att_location_face">人脸+地理位置签到</string>
    <string name="att_location_qrcode">地理位置+二维码签到</string>
    <string name="att_location_detail">经度：%1$s 纬度：%2$s \n距离签到中心点：%3$f米</string>

    <!--zxing相关-->
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <!--虹软人脸SDK相关-->
    <!--配置、功能选择界面-->
    <string name="page_preview">人脸属性检测（视频）</string>
    <string name="page_ir_preview">红外活体检测（视频）</string>
    <string name="page_face_recognize">人脸比对1:n（视频vs人脸库，RGB活体）</string>
    <string name="page_ir_face_recognize">人脸比对1:n（视频vs人脸库，IR活体）</string>
    <string name="page_single_image">人脸属性检测（图片）</string>
    <string name="page_multi_image">人脸比对1:n（图片vs图片）</string>
    <string name="page_face_manage">人脸批量注册管理</string>
    <string name="get_device_finger_failed">获取设备指纹失败，错误码：%d</string>
    <string name="choose_detect_degree">选择视频模式检测角度</string>
    <string name="copy_device_fingerprint">复制设备指纹信息</string>
    <string name="device_fingerprint_copied">设备指纹信息：\n%s\n已复制</string>
    <string name="active_engine">激活引擎</string>
    <string name="active_success">激活引擎成功</string>
    <string name="already_activated">引擎已激活，无需再次激活</string>
    <string name="active_failed">引擎激活失败，错误码为 %d</string>
    <string name="library_not_found">未找到库文件，请检查是否有将.so文件放至工程的 app\\src\\main\\jniLibs 目录下</string>
    <string name="ft_op_0">视频模式仅检测0度</string>
    <string name="ft_op_90">视频模式仅检测90度</string>
    <string name="ft_op_180">视频模式仅检测180度</string>
    <string name="ft_op_270">视频模式仅检测270度</string>
    <string name="ft_op_all">视频模式全方向人脸检测</string>

    <!--人脸属性检测（图片） 界面-->
    <string name="start_process">开始处理</string>
    <string name="choose_local_image">选择本地图片</string>
    <string name="processing">处理中</string>

    <!--人脸比对1:n（图片vs图片） 界面-->
    <string name="choose_main_image">选择主图</string>
    <string name="add_item_image">添加比对图</string>
    <string name="notice_choose_main_img">请先选择主图</string>
    <string name="compare_failed">比对失败，错误码为 %d</string>

    <!--各个界面获取本地图片失败提示-->
    <string name="get_picture_failed">获取图片失败</string>

    <!--各个界面获取权限失败时的提示-->
    <string name="permission_denied">权限被拒绝！</string>

    <!--各个界面引擎初始化失败的提示-->
    <string name="init_failed">引擎初始化失败，错误码为 %d</string>
    <string name="engine_not_initialized">引擎未初始化，错误码为 %d</string>

    <!--单目、双目识别注册界面-->
    <string name="register">录入人脸</string>
    <string name="switch_camera">切换相机</string>
    <string name="switch_camera_failed">切换相机失败</string>
    <string name="recognize_failed_notice">未通过:%s</string>
    <string name="recognize_success_notice">通过:%s</string>
    <string name="low_confidence_level">人脸置信度低</string>
    <string name="specific_engine_init_failed">%s 初始化失败，错误码为:%d</string>
    <string name="notice_change_detect_degree">相机已切换，若无法检测到人脸，需要在首页修改视频模式人脸检测角度</string>
    <string name="liveness_detect">活体检测</string>
    <string name="camera_rgb">RGB CAMERA</string>
    <string name="camera_ir">IR CAMERA</string>
    <string name="camera_rgb_preview_size">RGB CAMERA\n%dx%d</string>
    <string name="camera_ir_preview_size">IR CAMERA\n%dx%d</string>
    <string name="camera_error_notice">\n可能的原因：该设备不支持同时打开两个摄像头</string>
    <string name="draw_ir_rect_mirror_horizontal">IR人脸框水平镜像绘制</string>
    <string name="draw_ir_rect_mirror_vertical">IR人脸框垂直镜像绘制</string>

    <!--人脸批量注册进度框-->
    <string name="progress_dialog_batch_register">进度: %d / %d</string>
    <string name="progress_dialog_registering_please_wait">注册中，请稍等</string>

    <!--批量处理-->
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="batch_process_notification_register">请将需要注册的图片放在\nsdcard/arcfacedemo/register\n目录下</string>
    <string name="batch_process_no_face_need_to_delete">无人脸需要删除</string>
    <string name="batch_process_confirm_delete">确认删除这%d张图片及人脸特征？</string>
    <string name="batch_process_batch_register">批量注册</string>
    <string name="batch_process_notification">提示</string>
    <string name="batch_process_clear_faces">清空人脸库</string>
    <string name="batch_process_path_is_not_exists">路径 \n%s\n 不存在</string>
    <string name="batch_process_path_is_not_dir">路径 \n%s\n 不是文件夹</string>
    <string name="batch_process_processing_please_wait">处理中，请稍等</string>
    <string name="batch_process_finished_info">处理完成！\n处理总数 =  %d \n成功数 = %d \n失败数 = %d \n处理失败的图片已保存在文件夹 \' %s \'</string>
    <string name="real_name">真实姓名</string>
    <string name="user_tel">用户电话</string>
    <string name="user_email">用户邮箱</string>
    <string name="user_signature">个性签名</string>
    <string name="user_title">用户身份</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"欢迎 !"</string>
    <string name="invalid_username">用户名不合规</string>
    <string name="invalid_password">密码需要大于3位数</string>
    <string name="login_failed">"登录失败"</string>
    <string name="notification_title">通知中心</string>
    <string name="notice_time_prefix">发布时间：</string>
    <string name="user_info_header">用户信息</string>


</resources>