<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_info_header">

        <EditTextPreference
            app:key="real_name"
            app:title="@string/real_name"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="user_tel"
            app:title="@string/user_tel"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="user_email"
            app:title="@string/user_email"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="user_signature"
            app:title="@string/user_signature"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>